# slm_ce_fine_tune

./: .gitignore  main.py  pyproject.toml  rl_run_nl_to_owl_dl.py  rl_trainer_nl_to_owl_dl.py  sft_run_nl_to_owl_dl.py  sft_trainer_nl_to_owl_dl.py
datasets/: nlef_prompt_aifb.txt  nlef_prompt_bgs.txt  owl_dl_aifb.json  owl_dl_mutag.json
distillation/: explanations.json  nlef_prompt_mutag.txt  owl_dl_bgs.json  prompt.json
metrics/: rl_nl_to_owl_dl_run_metrics_Qwen3-8B_2.json  sft_nl_to_owl_dl_run_metrics_Qwen3-0.6B.json  sft_nl_to_owl_dl_run_metrics_Qwen3-1.7B.json  sft_nl_to_owl_dl_run_metrics_Qwen3-4B.json  sft_nl_to_owl_dl_run_metrics_Qwen3-8B.json  sft_nl_to_owl_dl_run_metrics_SmolLM-135M.json
outputs/: owl_dl_predictions_Qwen3-8B.txt  rl_owl_dl_predictions_Qwen3-8B.txt
subgraph_data/: pgexplainer_aifb.txt  pgexplainer_bgs.txt
