[project]
name = "slm-ce-fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.63.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "owlapy>=1.6.3",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.54.0",
    "rdflib>=7.6.0",
    "scipy>=1.17.0",
    "synthetic-data-kit>=0.0.5",
    "torch==2.6.0",
    "torch-geometric==2.6.0",
    "transformers>=5.3.0",
    "triton>=3.2.0",
    "trl>=0.29.0",
    "unsloth>=2025.9.5",
    "xformers>=0.0.29.post3",
]
